css/styles.css
/* user-defined styles here */
/* global mobile styles */
:root{
    --mainColor: #f6f4d2;
    --secondColor: #d4e09b;
    --mainTextColor: #283d3b;
    --secondTextColor: #a44a3f;
    /* font family */
    --MainFontstack:'Josefin Sans', sans-serif; 
    --secondFontStack: 'Kanit', sans-serif;
}
body{
    background-color: var(--mainColor);
    color:var(--mainTextColor);
    font-family: var(--MainFontstack);
    overflow-x: hidden;
}


.container{
    max-width: 1180px;
    margin: 0 auto;
    
}
header{
    background-color: var(--secondColor);
    
}
nav{
    background-color: var(--mainColor);
    position: relative;
    padding: 1rem 0 0;
    border-radius: 0 0 1rem 1rem;
}
nav ul{
    padding: 2rem;
}
nav ul li{
    list-style: none;
    margin: 0 0 0 0;
    padding: 1rem 0;
    border-bottom: 1px solid var(--secondTextColor);
}
nav a{
    text-decoration: none;
    font-family: var(--MainFontstack);
    color: var(--mainTextColor);
    font-size: 2rem;
}
nav a:hover{
    color: var(--secondTextColor);
}
body .not-visible{
    visibility: hidden;
    height: 0; 
    left: 100%; 
    transition: left 0.3s, visibility 0.1s;
}


.burger{
    padding: 0 2rem;
    text-align: end;
    font-size: 2.5rem;   
}
.product-list{
    visibility: visible;
    position: absolute;
    background-color: var(--mainColor);
    top:calc(100% - 1rem);
    z-index: 10;
    left: 0;
    right: 0;
    transition: all 0.3s,  visibility 0.1s;
    
    
}

.dropdowntitle:hover{
    cursor: pointer;
    background-color: #ccc890;
    color: var(--secondTextColor);
}
.burger i:hover{
    cursor: pointer;
    color: var(--secondTextColor);
}


form{
    display: flex;
    font-size: 2rem;
    margin: 1rem 2rem 0;
}
input:focus{
    outline: none;
}
button:focus{
    outline: none;
}
form input{
    padding:0.2rem 0.5rem;
    border-radius: 1rem 0 0 1rem;
    border-color: var(--secondTextColor);
    background-color: var(--mainColor);
}
form button{
    border-radius: 0 1rem 1rem 0;
    border-color: var(--secondTextColor);
    background-color: var(--mainColor);
}
form button i{
   vertical-align: middle;
   color: var(--secondTextColor);
}



.page-title{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 0rem 2rem 2rem;
}
h1{
    font-family: var(--secondFontStack);
    color: var(--secondTextColor);
    font-size: 4rem;
    line-height: 4rem;
}
.youtube-link, iframe{
    max-width: 90vw;
}

.image-spread{
    padding: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
}

.image-spread img{
    width: 15rem;
    max-width: 45vw;
    padding: 0.5rem;
}
.image-spread p{
    text-align: center;
    flex-basis: 63%;
    font-size: 3rem;
}

.rating-aspects section{
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 2rem;
}
.rating-aspects section>p:first-of-type{
    flex-basis: calc(50% - 2rem);
}
h3{
    color: var(--secondTextColor);
}

.blog-writeup{
    margin: 1rem auto;
    padding: 1rem;
    text-align: center;
}
main i{
    font-size: 6rem;
    color: var(--mainTextColor);
}

footer{
    background-color: var(--secondColor);
    padding: 2rem 0 1rem;
    margin-top: 10rem;
}

@media(min-width:700px){

    .image-spread p{
        flex-basis: 20%;
    }
    .rating-aspects section{
        flex-direction: row;
        justify-content: space-between;
    }
}
@media(min-width: 1000px){
    .dropdowntitle{
        height: initial!important;
        visibility: initial!important;
        opacity: 1!important;
        display: flex;
        align-items: center;
        justify-content: space-between;
        font-size: 2rem;
        border: 2px solid var(--mainTextColor);
        margin: 0 2rem 1rem;
        padding: 0 2rem;
        border-radius: 1rem;
    }
    nav{
        padding: 1rem 0;
    }
    .burger{
        visibility: hidden; 
        height: 0; 
        left: 100%; 
    }
    
}

